--- a/index.css
+++ b/index.css
@@ -53,12 +53,19 @@ table {
     max-width:100%;  
     border:1px solid grey;
 
+}/*
+nav {
+width:0 auto;
+display: flex;
+justify-content:space-around;	
+padding:10%;
 }
 #outsideContainer {
     width:100%;
 }
 #imageOfMe {
-    padding:25%;	
+    padding:25%;
+	margin-bottom:25%;	
 }
 .headOfPage  {
     display:flex;
@@ -75,6 +82,9 @@ table {
 
 
 }
+#careerFlair {
+	justify-content: flex-end;
+	}
 #testHeadRight {
 	display:flex;
 	flex-direction:;
@@ -82,13 +92,26 @@ table {
 	align-items:center;
 	width:70%;
 }
-/*#testHeadRight .headNav a {
-	width:80%;
-    display:flex;
-	flex-direction:;
-    jutify-content:;*/
+
     
 }
 #bodyBackground {
 
 }
+#justTheFoot {
+	display: flex;
+	flex-wrap: ;
+}
+/*.footerNav {
+display:flex;
+flex-wrap: nowrap;
+justify-content: space-between;
+width:0 auto;
+}*/
+.footerNav a {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	width:to;
+
+}*/
