--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 /*adding css reset*/
-*/
+/*
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -43,75 +43,45 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+}*/
 /* This is the start of my css*/
 
 /* General Styles*/
 
 * {
     box-sizing:border-box;
-    max-width:100%;  
+    max-width:0 auto;  
     border:1px solid grey;
 
-}/*
-nav {
-width:0 auto;
-display: flex;
-justify-content:space-around;	
-padding:10%;
 }
-#outsideContainer {
-    width:100%;
+.headOfPage {
+	display: flex;
+	width:100%;
 }
-#imageOfMe {
-    padding:25%;
-	margin-bottom:25%;	
-}
-.headOfPage  {
-    display:flex;
-    flex-wrap:;
-    width: 100%;
+.boxForName {
+	flex-direction: row;
+	width:50%;
 }
 .nameContainer {
-    display:flex;
-    flex-direction:row;
-    padding-top:0 auto;
-    width:30%;
-}
-#nameFlair {
-
+	
+	;
 
 }
 #careerFlair {
-	justify-content: flex-end;
-	}
+	width:50%;
+	justify-content: fle;
+}
 #testHeadRight {
-	display:flex;
-	flex-direction:;
-	justify-content:space-between;
-	align-items:center;
-	width:70%;
-}
-
-    
-}
-#bodyBackground {
-
-}
-#justTheFoot {
 	display: flex;
-	flex-wrap: ;
+	justify-content: flex-end;
+	width:50%;
+	
+}	
 }
-/*.footerNav {
-display:flex;
-flex-wrap: nowrap;
-justify-content: space-between;
-width:0 auto;
-}*/
-.footerNav a {
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	width:to;
-
-}*/
+.headNav {
+	width:100%;
+	justify-content:;
+}#imgOfMe {
+	max-width:0 auto;
+	;
+}
